src/test/ui/generic-associated-types/issue-68641-check-gat-bounds.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-68641-check-gat-bounds.rs:14:5
   |
LL |     type Item<'a>: Copy;
   |                    ---- required by this bound in `UnsafeCopy::Item`
...
LL |     type Item<'a> = T;
   |     ^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> UnsafeCopy for T {
   |       ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
